<resources>
    <string name="app_name">E10D</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="create_account">Create new account</string>
    <string name="login_message">Signing in…</string>
    <string name="account_registration">E10D Account Registration</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email ID</string>
    <string name="address">Address</string>
    <string name="cell">Cell</string>
    <string name="or">OR</string>
    <string name="login_to_account">Login to Account</string>
    <string name="latest">Latest</string>
    <string name="apparels">Apparels</string>
    <string name="electronics">Electronics</string>
    <string name="health">Health</string>
    <string name="jewelry">Jewelry</string>
    <string name="fetching_products">Fetching Products</string>
    <string name="fetching_products_detail">Fetching Product Detail</string>
    <string name="adding_to_cart">Please wait, Adding items to Cart…</string>
    <string name="view">View</string>
    <string name="add">Add</string>
    <string name="add_to_cart">ADD TO CART</string>
</resources>
