<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linCreateAccountLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/bg_stroke_red_3_dp_red_color"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/account_registration"
        android:textColor="@color/text_color"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtFullName"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_stroke_red_1_dp_red_color"
        android:gravity="center"
        android:hint="@string/full_name"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edtEmailID"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_stroke_red_1_dp_red_color"
        android:gravity="center"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edtAddress"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_stroke_red_1_dp_red_color"
        android:gravity="center"
        android:hint="@string/address"
        android:inputType="textEmailAddress"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edtCell"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_stroke_red_1_dp_red_color"
        android:gravity="center"
        android:hint="@string/cell"
        android:inputType="phone"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_stroke_red_1_dp_red_color"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/header_red"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/or"
        android:textColor="@color/text_color"
        android:textSize="18sp" />



    <TextView
        android:id="@+id/txtLoginToAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/login_to_account"
        android:textColor="@color/text_color"
        android:textSize="18sp" />
</LinearLayout>