<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linLoginLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/bg_stroke_red_3_dp_red_color"
    android:gravity="center"
    android:orientation="vertical">


    <EditText
        android:id="@+id/edtUserID"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_stroke_red_1_dp_red_color"
        android:gravity="center"
        android:hint="@string/user_id"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_stroke_red_1_dp_red_color"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/header_red"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="OR"
        android:textColor="@color/text_color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/create_account"
        android:textColor="@color/text_color"
        android:textSize="18sp" />
</LinearLayout>